# pico_c

./: CMakeLists.txt  demo.c  demo.h  main.c  main.h  pico_c.c
hal/: CMakeLists.txt  egk_i2c_pico.c  egk_i2c_pico.h  egk_sensor.c  egk_time.h  egk_time_pico.c
hal/incl/: egk_i2c.h  egk_sensor.h
hal/pico/: egk_i2c.c  egk_time.c
incl/: egelke.h  error.h
sgp4x/: CMakeLists.txt
sgp4x/incl/: egk_sgp4x.h
sgp4x/src/: egk_sgp4x.c
shtc3/: CMakeLists.txt  egk_shtc3.c  egk_shtc3.h
shtc3/incl/: egk_shtc3.h
shtc3/src/: egk_shtc3.c
